feat: migrate to PostgreSQL and refactor database configuration